# my-website-springreact

./: .editorconfig  .gitignore  Dockerfile  HELP.md  LICENSE  NOTES.md  README.md  package-lock.json  package.json  pom.xml  webpack.config.js
application/: README.md  mvnw  package.json  pom.xml
application/src/main/c/: CMakeLists.txt
application/src/main/c/headers/: ExtTester.h
application/src/main/c/impl/: ExtFacade.cpp  ExtTester.cpp
client1/: .editorconfig  NOTES.md  README.md  package.json  pom.xml  webpack.config.js
client2/: README.md  pom.xml
ext-react-frontend/: .gitignore  README.md  package-lock.json  package.json  pom.xml
ext-react-frontend/public/stylesheets/: app.css  emb.css
external-react-frontend/: README.md  app.js  package-lock.json  package.json  pom.xml  webpack.config.js
external-react-frontend/public/javascripts/: module_tests.jsx
external-react-frontend/public/stylesheets/: app.css  emb.css  style.css
external-react-frontend/routes/: index.js  tests.js
external-react-frontend/views/: index.pug  layout.pug  tests.pug
extreact-frontend/: README.md  package.json
extreact-frontend/src/: App.js
extreact-frontend/src/container/: Main.js  datatest.js  reactitems.js
extvue-frontend/: README.md  package.json
extvue-frontend/public/: index.html
extvue-frontend/src/: App.vue
extvue-frontend/src/components/: HelloWorld.vue
server/: README.md  pom.xml
src/main/js/: reactdraft.js  reactitems.js  reactmodule.js  reacttest.js  site.js  website.js
src/main/resources/: application.properties  database.sql  database.xml  (+1 more)
(+451 files in other folders)
